# pydlpack

./: .gitattributes  README.md  pyproject.toml
.github/workflows/: python-package.yml
dlpack/: __init__.py  buffer.py  capsule.py
dlpack/tests/: __init__.py  test_buffer.py  test_capsule.py  test_dlpack.py
