[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "pydlpack"
requires-python = ">=3.9"
authors = [{name = "Pearu Peterson", email = "pearu.peterson@gmail.com"}]
description = "DLPack data exchange interface in Python"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    'Programming Language :: Python :: 3',
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development",
]
dynamic = ["version"]

dependencies = []

[project.optional-dependencies]

test = [
    "pytest",
    "coverage",
    "pytest-mock",
    "numpy",
]

dev = [
    "pre-commit",
]

[project.urls]
Home = "https://github.com/pearu/pydlpack"
Source = "https://github.com/pearu/pydlpack"

[tool.setuptools.packages.find]
include = ["dlpack", "dlpack.tests"]  # package names should match these glob patterns (["*"] by default)
exclude = [".*", "*~", "*/*~", "*/*/*~", "*/__pycache__", "*/*/__pycache__"]

[tool.black]
line-length = 127
target-version = ["py310", "py311", "py312"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-rsx -v"
testpaths = [
    "dlpack/tests",
]

[tool.setuptools_scm]
version_file = "dlpack/_version.py"